first commit azd 9

--- a/LAHJA/Pages/Auths/ForgetPassword.razor
+++ b/LAHJA/Pages/Auths/ForgetPassword.razor
@@ -1,12 +1,14 @@
 ﻿@page "/ForgetPassword"
 @page "/ForgetPassword/{Message}"
 @using LAHJA.UI.Templates.Auth
+@using Microsoft.AspNetCore.Authorization
+
+@attribute [AllowAnonymous]
+
 
 <TemplateForgetPassword Message="@Message" /> 
 
 @code {
-
-
 
     [Parameter] public string Message { set; get; }
 }
