--- a/LAHJA/Pages/Studio/Index.razor
+++ b/LAHJA/Pages/Studio/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/studio"
 
 @using LAHJA.UI.Templates.Studio
+@using Microsoft.AspNetCore.Authorization
 
+@attribute [Authorize]
 
 <TemplateStudio  />
 
