--- a/LAHJA/Pages/TemplatePlans/Index.razor
+++ b/LAHJA/Pages/TemplatePlans/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Plans"
 @using LAHJA.UI.Templates.Plans
-
+@using Microsoft.AspNetCore.Authorization
+@attribute [AllowAnonymous]
 
 
  <div class="p-4">
