--- a/LAHJA/UI/Components/Auth/ForgetPasswordForm.razor
+++ b/LAHJA/UI/Components/Auth/ForgetPasswordForm.razor
@@ -1,6 +1,8 @@
 ﻿@using System.ComponentModel.DataAnnotations
 @using LAHJA.Data.UI.Components.Base
+@using LAHJA.UI.Components.General.Button
 @using LAHJA.UI.Components.General.InputField
+@using Microsoft.AspNetCore.Authorization
 @using global::Shared.Constants
 @using global::Shared.Constants._Messages
 @using global::Shared.Wrapper
@@ -11,7 +13,7 @@
 @inject NavigationManager Navigation
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
-
+@attribute [AllowAnonymous]
 
 @if (Message==null){
 
@@ -25,8 +27,8 @@
 
                      <EmailField Class="my-5" FullWidth Label="Email" Required="true" @bind-Value="@email" />
 
-                    <MudButton Variant="Variant.Filled" FullWidth Color="@AppColors.BASE_COLOR_ENUM" OnClick="onSubmitConfirmEmail" Class="ml-auto my-5">
-                        @MapperMessages.Map(TitleLabels.SEND_VERIFICATION_LINK_VIA_EMAIL_AR,TitleLabels.SEND_VERIFICATION_LINK_VIA_EMAIL_EN)</MudButton>
+                    <CustomButton OnClick="onSubmitConfirmEmail" IsProcessing="processing" Text="@MapperMessages.Map(TitleLabels.SEND_VERIFICATION_LINK_VIA_EMAIL_AR,TitleLabels.SEND_VERIFICATION_LINK_VIA_EMAIL_EN)" />
+                    
 
                 </div>
             </MudForm>
@@ -44,6 +46,7 @@ else
 
 @code {
     private bool _licenseAccepted = false;
+    private bool processing = false;
 
 
     [CascadingParameter] MudDialogInstance MudDialog { get; set; }
@@ -85,7 +88,7 @@ else
         var dialog = DialogService.Show<DialogBox>("", parameters, options);
         var result = await dialog.Result;
 
-     
+
     }
 
     private async Task onSubmitConfirmEmail()
@@ -97,7 +100,7 @@ else
             {
 
 
-
+                processing = true;
                 if (!string.IsNullOrEmpty(email) && OnSubmited.HasDelegate)
                 {
 
@@ -105,6 +108,8 @@ else
                     await OnSubmited.InvokeAsync(new DataBuildAuthBase{Email=email} );
 
                 }
+                await Task.Delay(6000);
+                processing = false;
 
             }
 
