--- a/LAHJA/UI/Components/Auth/ReCaptchaComponent.razor
+++ b/LAHJA/UI/Components/Auth/ReCaptchaComponent.razor
@@ -1,4 +1,7 @@
-﻿<script>
+﻿@using Microsoft.AspNetCore.Authorization
+@attribute [AllowAnonymous]
+
+<script>
     //V3
     //src="https://www.google.com/recaptcha/api.js"
 </script>
