--- a/LAHJA/UI/Components/Auth/ResetPasswordComponent.razor
+++ b/LAHJA/UI/Components/Auth/ResetPasswordComponent.razor
@@ -6,7 +6,10 @@
 @using LAHJA.UI.Components.General.InputField
 @using MudBlazor
 @using System.ComponentModel.DataAnnotations
-@* @inherits LayoutComponentBase *@
+@using Microsoft.AspNetCore.Authorization
+
+@attribute [AllowAnonymous]
+
 @inherits CardAuth<DataBuildAuthBase>
 
 
@@ -99,11 +102,16 @@
 
 
     protected async Task OnResetPassword()
-    { 
+    {
+        isLoading = true;
+     
         if (OnSubmitResetPassword.HasDelegate && !string.IsNullOrEmpty(email) && !string.IsNullOrEmpty(code) && !string.IsNullOrEmpty(password))
         {
             await OnSubmitResetPassword.InvokeAsync(new DataBuildAuthBase{ Email=email,Password=password,Code=code});
         }
+        await Task.Delay(6000);
+        isLoading = false;
+    
     }
 
 }
