--- a/LAHJA/UI/Components/ProFile/Dashboard.razor
+++ b/LAHJA/UI/Components/ProFile/Dashboard.razor
@@ -1,5 +1,8 @@
 ﻿@using LAHJA.UI.Components.ProFile.Charts
 @using LAHJA.UI.Components.Statistics
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
 
     <iframe src="https://modelspeech.onrender.com/dashboard/"
             width="100%"
