--- a/LAHJA/UI/Components/ProFile/PlansCompireCompoent.razor
+++ b/LAHJA/UI/Components/ProFile/PlansCompireCompoent.razor
@@ -1,5 +1,6 @@
 ﻿@inject NavigationManager Navigation
-    
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 
 <MudExpansionPanels   Elevation="0">
     <MudExpansionPanel Text="Current plan">
