--- a/LAHJA/UI/Components/ProFile/Settings/BillingOverview.razor
+++ b/LAHJA/UI/Components/ProFile/Settings/BillingOverview.razor
@@ -1,7 +1,8 @@
 ﻿@using LAHJA.UI.Components.ProFile.Charts
 @using LAHJA.UI.Components.ProFile.USettings
 @using LAHJA.Them
-
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 
 
  <MudGrid Class="mt-6">
