--- a/LAHJA/UI/Components/TabelCard/TabelDashCard.razor
+++ b/LAHJA/UI/Components/TabelCard/TabelDashCard.razor
@@ -21,7 +21,7 @@
     }
 </style>
 
-<div class="p-5">
+<div class="p-5 w-100">
     <div class="p-1 RCardP">
 
         @if (BarTabel != null && BarTabel.Any())
