--- a/LAHJA/UI/Templates/Auth/TemplateResetPassword.razor
+++ b/LAHJA/UI/Templates/Auth/TemplateResetPassword.razor
@@ -1,8 +1,9 @@
 ﻿@page "/ResetPassword"
 @using LAHJA.UI.Components.Auth
+@using Microsoft.AspNetCore.Authorization
 @inject LAHJA.Data.UI.Templates.Auth.TemplateAuth Template
- @inject NavigationManager Navigation
-
+@inject NavigationManager Navigation
+@attribute [AllowAnonymous]
 
 <ResetPasswordComponent Email="@Email" Code="@Code" OnSubmitResetPassword="Template.BuilderComponents.SubmitResetPassword" />
 
