--- a/LAHJA/UI/Templates/Profile/TemplateSubscriptionsPlan.razor
+++ b/LAHJA/UI/Templates/Profile/TemplateSubscriptionsPlan.razor
@@ -10,6 +10,9 @@
 @using LAHJA.UI.Components.ProFile
 @using LAHJA.UI.Components.ProFile.Settings
 @using LAHJA.UI.Components.ProFile.USettings
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
 
 @inject IManageLanguageService _manageLanguageService
 
