--- a/LAHJA/App.razor
+++ b/LAHJA/App.razor
@@ -1,4 +1,9 @@
-﻿@* <!DOCTYPE html>
+﻿@using LAHJA.UI.Templates.Auth
+@using Microsoft.AspNetCore.Components.Authorization
+@inject CustomAuthenticationStateProvider AuthStateProvider
+@inject LAHJA.Data.UI.Templates.Auth.TemplateAuth templateAuth
+
+@* <!DOCTYPE html>
 <html lang="en">
 
  <head>
@@ -29,7 +34,7 @@
     <link rel="icon" type="image/png" href="favicon.png" /> *@
  @*     <HeadOutlet /> *@
 </head>
-<Router AppAssembly="@typeof(App).Assembly">
+@* <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -40,4 +45,34 @@
             <p role="alert">Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
-</Router>
+</Router> *@
+
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(App).Assembly">
+        <Found Context="routeData">
+            <AuthorizeRouteView  RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                <NotAuthorized>
+                     <TemplateAuth IsToLoginMode="true" />
+                </NotAuthorized>
+            </AuthorizeRouteView>
+            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        </Found>
+        <NotFound>
+            <PageTitle>Not found</PageTitle>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <p role="alert">عذرًا، لا يوجد شيء في هذا العنوان.</p>
+            </LayoutView>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
+
+
+@code {
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await AuthStateProvider.InitializeAsync();
+        }
+    }
+}
