--- a/LAHJA/Pages/Auths/Auth.razor
+++ b/LAHJA/Pages/Auths/Auth.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Security.Claims
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.IdentityModel.JsonWebTokens
 @using Microsoft.IdentityModel.Tokens
 @using System.IdentityModel.Tokens.Jwt
@@ -8,6 +9,7 @@
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime;
+@attribute [AllowAnonymous]
 
 <h3>Login</h3>
 
