--- a/LAHJA/Pages/Counter.razor
+++ b/LAHJA/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@using LAHJA.Notification
 @inject NotificationService NotificationService
 @inject NavigationManager NavigationManager
 @implements IAsyncDisposable
