--- a/LAHJA/Pages/FeatureServices/FeatureServices.razor
+++ b/LAHJA/Pages/FeatureServices/FeatureServices.razor
@@ -1,7 +1,8 @@
 ﻿ @page "/featureServices"
 
 @using LAHJA.UI.Components.FeatureServices
-
+@using Microsoft.AspNetCore.Authorization
+@attribute [AllowAnonymous]
 
 <FeatureModelLahjaModel  />
 <ProductLahjaModel />
