--- a/LAHJA/Pages/Services/Index.razor
+++ b/LAHJA/Pages/Services/Index.razor
@@ -6,6 +6,11 @@
 @using LAHJA.UI.Templates.Plans
 @using LAHJA.UI.Templates.Services
 @using LAHJA.UI.Components.TabelCard
+@using Microsoft.AspNetCore.Authorization
+
+
+@attribute [Authorize]
+
 <style>
     .custom-container {
         display: flex;
