--- a/LAHJA/Pages/TrainingModel/Index.razor
+++ b/LAHJA/Pages/TrainingModel/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/trainingModel"
 @using LAHAJ.Loading
 @using LAHJA.UI.Components.Training
+@using Microsoft.AspNetCore.Authorization
 
+@attribute [Authorize]
 
   <MainTrinningCompoent />
 
