--- a/LAHJA/UI/Components/Payment/PaymentComponts.razor
+++ b/LAHJA/UI/Components/Payment/PaymentComponts.razor
@@ -6,15 +6,16 @@
 @using LAHJA.Helpers.Services
 @using LAHJA.Them
 @using LAHJA.UI.Components.Billing.Shared
+@using LAHJA.UI.Components.Payment.CreditCard
+@using Microsoft.AspNetCore.Authorization
+@using MudBlazor
+
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
-@using LAHJA.UI.Components.Payment.CreditCard
-@using MudBlazor
 @inject IManageLanguageService _manageLanguageService
-@using LAHJA.Them
-@inject AuthService AuthService
 
 
+@attribute [Authorize]
 
 
 <MudPaper Style="height:100%">
