--- a/LAHJA/UI/Components/ProFile/Settings/AccountTemplate.razor
+++ b/LAHJA/UI/Components/ProFile/Settings/AccountTemplate.razor
@@ -2,6 +2,9 @@
 @using LAHJA.Them
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.Extensions.Localization
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
  @inherits CardAuth<DataBuildAuthBase>
 @inject IJSRuntime JSRuntime
 @* @inject IStringLocalizer<AccountTemplate> Localizer *@
