--- a/LAHJA/UI/Components/ProFile/USettings/SubscriptionDetails.razor
+++ b/LAHJA/UI/Components/ProFile/USettings/SubscriptionDetails.razor
@@ -6,6 +6,7 @@
 <style>
     .table-container {
         max-width: 600px; 
+        height:700px !important;
         margin: auto;
         overflow-x: hidden !important;
 
@@ -15,21 +16,27 @@
     .table-label {
          width: 50%; 
         font-weight: bold;
-        padding: 10px;
+        padding: 0px;
+        font-size: 16px;
   /*       background-color: #f5f5f5; */
     }
 
     .table-value {
-         width: 50%;
-        padding: 10px;
+        width: 50%;
+        padding:0px 0px;
         text-align:left;
+        font-size:16px;
     }
 
     .table-row {
         width:100% !important;
         border-bottom: 1px solid #ddd;
-        padding:10px;
+        padding:0px;
     }
+
+     .table-row *{
+            padding: 0px !important;
+     }
 
 </style>
 
@@ -43,20 +50,89 @@
 
 
             <MudPaper Class="d-flex flex-column justify-content-center align-items-center">
-                <MudCardHeader>
-         @*            <CardHeaderAvatar>
-                        <MudAvatar Color="Color.Secondary">I</MudAvatar>
-                    </CardHeaderAvatar> *@
+                <MudCardHeader Class="d-flex justify-content-around align-items-center">
                     <CardHeaderContent>
                         <MudText Typo="Typo.h5" Align="Align.Center" Class="m-auto my-3">@ColumnsTranslations.GetTranslation("Subscription", lg)</MudText>
                     </CardHeaderContent>
                     <CardHeaderActions>
-                        <MudIconButton Icon="@Icons.Material.Filled.Settings" OnClick="OnSubmitCheckoutManage" Color="Color.Default" />
+                        <MudTooltip Text="@ColumnsTranslations.GetTranslation("SubscriptionSettings",lg)">
+                            <MudIconButton Icon="@Icons.Material.Filled.Settings" OnClick="OnSubmitCheckoutManage" Color="Color.Default" />
+                        </MudTooltip>
                     </CardHeaderActions>
                 </MudCardHeader>
-                
-                <MudTable  T="DataBuildUserSubscriptionInfo" Items="new List<DataBuildUserSubscriptionInfo>{DataBuild}"
-                          Striped="true" ReadOnly="true" Class="table-container p-3">
+
+                <MudCard Class="p-2 rounded-5 mt-5">
+                    <MudGrid Class="p-3 border" Style="width: 100%; ">
+                        <MudItem xs="12" Class="table-row">
+                            <MudGrid Class="d-flex align-items-center">
+                                <MudItem xs="6"><MudText Class="table-label">@ColumnsTranslations.GetTranslation("Id", lg)</MudText></MudItem>
+                                <MudItem xs="6"><MudText Class="table-value">@dataBuild.Id</MudText></MudItem>
+                            </MudGrid>
+                        </MudItem>
+
+                        @if (!string.IsNullOrEmpty(dataBuild.ProductName))
+                        {
+                            <MudItem xs="12" Class="table-row">
+                                <MudGrid Class="d-flex align-items-center">
+                                    <MudItem xs="6"><MudText Class="table-label">@ColumnsTranslations.GetTranslation("ProductName", lg)</MudText></MudItem>
+                                    <MudItem xs="6"><MudText Class="table-value">@dataBuild.ProductName</MudText></MudItem>
+                                </MudGrid>
+                            </MudItem>
+                        }
+
+                        @if (!string.IsNullOrEmpty(dataBuild.Description))
+                        {
+                            <MudItem xs="12" Class="table-row">
+                                <MudGrid Class="d-flex align-items-center">
+                                    <MudItem xs="6"><MudText Class="table-label">@ColumnsTranslations.GetTranslation("Description", lg)</MudText></MudItem>
+                                    <MudItem xs="6"><MudText Class="table-value">@dataBuild.Description</MudText></MudItem>
+                                </MudGrid>
+                            </MudItem>
+                        }
+
+                        <MudItem xs="12" Class="table-row">
+                            <MudGrid Class="d-flex align-items-center">
+                                <MudItem xs="6"><MudText Class="table-label">@ColumnsTranslations.GetTranslation("NumberRequests", lg)</MudText></MudItem>
+                                <MudItem xs="6"><MudText Class="table-value">@dataBuild.NumberRequests</MudText></MudItem>
+                            </MudGrid>
+                        </MudItem>
+
+                        <MudItem xs="12" Class="table-row">
+                            <MudGrid Class="d-flex align-items-center">
+                                <MudItem xs="6"><MudText Class="table-label">@ColumnsTranslations.GetTranslation("Amount", lg)</MudText></MudItem>
+                                <MudItem xs="6"><MudText Class="table-value">@dataBuild.Amount</MudText></MudItem>
+                            </MudGrid>
+                        </MudItem>
+
+                        <MudItem xs="12" Class="table-row">
+                            <MudGrid Class="d-flex align-items-center">
+                                <MudItem xs="6"><MudText Class="table-label">@ColumnsTranslations.GetTranslation("StartDate", lg)</MudText></MudItem>
+                                <MudItem xs="6"><MudText Class="table-value">@dataBuild.StartDate</MudText></MudItem>
+                            </MudGrid>
+                        </MudItem>
+
+                        <MudItem xs="12" Class="table-row">
+                            <MudGrid Class="d-flex align-items-center">
+                                <MudItem xs="6"><MudText Class="table-label">@ColumnsTranslations.GetTranslation("CancelAtPeriodEnd", lg)</MudText></MudItem>
+                                <MudItem xs="6"><MudText Class="table-value">@dataBuild.CancelAtPeriodEnd</MudText></MudItem>
+                            </MudGrid>
+                        </MudItem>
+
+                        <MudItem xs="12" Class="p-0">
+                            <MudGrid Class="d-flex align-items-center">
+                                <MudItem xs="6"><MudText Class="table-label">@ColumnsTranslations.GetTranslation("Status", lg)</MudText></MudItem>
+                                <MudItem xs="6">
+                                    <MudChip Class="py-0 px-3" T="string" Color="@(dataBuild.Active ? Color.Success : Color.Error)">
+                                        @dataBuild.Status
+                                    </MudChip>
+                                </MudItem>
+                            </MudGrid>
+                        </MudItem>
+                    </MudGrid>
+                </MudCard>
+
+                @* <MudTable  T="DataBuildUserSubscriptionInfo" Items="new List<DataBuildUserSubscriptionInfo>{DataBuild}"
+                          Striped="true" ReadOnly="true" Class="table-container p-3" Style="width: 100% !important;">
                       
                     <RowTemplate >
                         <MudTr Class="table-row">
@@ -101,12 +177,12 @@
                                 </MudChip>
                             </MudTd>
                         </MudTr>
-                    </RowTemplate>
+                    </RowTemplate> *@
 
              
-            </MudTable>
+            @* </MudTable> *@
            
-             <div class="w-100 m-auto p-3 d-flex justify-content-around align-items-center">
+             <div class="w-100 p-3 d-flex justify-content-around align-items-center">
 
                     @* <MudIconButton Icon="@Icons.Material.Filled.Pause" Variant="Variant.Outlined" Color="AppColors.BASE_COLOR_ENUM" Size="Size.Medium" /> *@
 
@@ -282,6 +358,7 @@
                     { "Pause", "Pause" },
                     { "Resume", "Resume" },
                     { "Status", "Status" },
+                    { "SubscriptionSettings", "Subscription Settings" },
                     { "PauseSubscriptionMsg", "The current subscription will be temporarily suspended. Do you agree?" },
                     { "ResumeSubscriptionMsg", "The current subscription will be reactivated. Do you agree?" },
                     { "RemoveSubscriptionMsg", "The current subscription will be deleted. Do you agree? You will not be able to use it again !!" },
@@ -302,6 +379,7 @@
                     { "Pause", "إيقاف مؤقت" },
                     { "Resume", "إستئناف" },
                     { "Status", "الحالة" },
+                    { "SubscriptionSettings", "اعدادات الاشتراك" },
                     { "PauseSubscriptionMsg", "سيتم إيقاف الاشتراك الحالي مؤقتاً هل انت موافق على ذلك ؟" },
                     { "ResumeSubscriptionMsg", " سيتم إعادة تفعيل الاشتراك الحالي هل انت موافق على ذلك ؟" },
                     { "RemoveSubscriptionMsg", " سيتم حذف  الاشتراك الحالي هل انت موافق على ذلك ؟ لن تتمكن من استخدامه مره اخرى." },
