--- a/LAHJA/UI/Components/ProFile/UserSettings.razor
+++ b/LAHJA/UI/Components/ProFile/UserSettings.razor
@@ -1,4 +1,7 @@
-﻿@*   @page "/settings" 
+﻿@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
+@*   @page "/settings" 
  @using BlazorASG.Components.New
 
 <main class="flex flex-1 flex-col">
