--- a/LAHJA/UI/Components/StudioLahjaAi/MainStudio.razor
+++ b/LAHJA/UI/Components/StudioLahjaAi/MainStudio.razor
@@ -1,10 +1,12 @@
 ﻿@using Domain.ShareData
 @using LAHJA.Helpers.Services
 @using LAHJA.Them
+@using Microsoft.AspNetCore.Authorization
 @inject LanguageService languageService
 @inject IManageLanguageService _manageLanguageService
 @inject ISnackbar snackbar
 
+@attribute [Authorize]
 
 <MudPaper Style="overflow:hidden;height:100%;position:fixed;left:0;width:100%" Elevation="0">
 
