--- a/LAHJA/UI/Templates/Billing/TemplateBilling.razor
+++ b/LAHJA/UI/Templates/Billing/TemplateBilling.razor
@@ -4,9 +4,12 @@
 @using LAHJA.Data.UI.Templates.Auth
 @using LAHJA.UI.Components.Plan
 @using LAHJA.UI.Components.ProFile
-
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 
 @inject LAHJA.Data.UI.Templates.Profile.TemplateProfile Template
+
+
 
 @if(Template!=null){
     <SettingshomProfile DataBuild="buildData" />
