--- a/LAHJA/UI/Templates/Payment/TemplatePayment.razor
+++ b/LAHJA/UI/Templates/Payment/TemplatePayment.razor
@@ -10,15 +10,18 @@
 @using LAHJA.Helpers.Services
 @using LAHJA.UI.Components.Billing.Shared
 @using LAHJA.UI.Components.Payment
+@using Microsoft.AspNetCore.Authorization
 @using global::Shared.Constants.Router
 
-
+@inject NavigationManager Navigation;
 @inject LAHJA.Data.UI.Templates.Plans.TemplatePlans TemplatePlan
 @inject LAHJA.Data.UI.Templates.Payment.TemplatePayment templatePayment
 @inject LAHJA.Data.UI.Templates.Billing.TemplateBilling TemplateBilling
 @inject LAHJA.Data.UI.Templates.CreditCard.TemplateCreditCard templateCreditCard
-@inject AuthService AuthService;
-@inject NavigationManager Navigation;
+
+
+@attribute [Authorize]
+
 
 @if (templatePayment != null && templateCreditCard!=null  )
 {
@@ -57,20 +60,17 @@
     {
         if (firstRender)
         {
-            var isLogin = await AuthService.isAuth();
-            if (isLogin)
-            {
+   
                 if (PlanId != null)
                 {
                     await initializePlanAsync();
                     // await initializeBillingDetailsAsync();
                     // await initializeCreditCardDetailsAsync();
-
                 }
 
                 isLoading = false;
                 StateHasChanged();
-            }
+        
         }
 
      
