--- a/LAHJA/UI/Templates/Profile/SettingshomProfile.razor
+++ b/LAHJA/UI/Templates/Profile/SettingshomProfile.razor
@@ -12,7 +12,9 @@
 @using LAHJA.UI.Components.ProFile.USettings
 @using LAHJA.UI.Templates.Subscription
 @using global::Shared.Constants.Router
-  
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+
 @inherits BaseInitializationComponent
 @inject NavigationManager NavigationManager
 @inject LanguageService languageService
@@ -25,12 +27,10 @@
 
 @* <ResendConfirmationemail />   *@
 
-@if (_isAuth){
+
 
     @if(DataBuild!=null)
     {
-
-
         <div style="" class="cont-plan-RenderComponent">
 
 
@@ -130,16 +130,13 @@
         }
 
     }
-else
-{
-    <Loading IsLoading="@(!_isAuth)" />
-}
+
 
 
 @code
 {
 
-    private bool _isAuth = false;
+
     private bool _open = false;
     [Parameter] public string Url { get; set; } = "profile"; 
     [Parameter] public string Filter { get; set; } = "profile";
@@ -176,16 +173,6 @@ else
 
         if (firstRender)
         {
-
-            // base.OnAfterRender(firstRender);
-
-            _isAuth =await AuthService.isAuth();
-
-            if (!_isAuth)
-            {
-                Navigation.NavigateTo(RouterPage.LOGIN, true);
-            }
-
             CurrentLanguage = await _manageLanguageService.GetLanguageAsync();
             var result = await Template.GetProfileUserAsync();
 
@@ -215,6 +202,7 @@ else
                 ["Profile"] = "Profile",
                 ["Spaces"] = "Spaces",
 
+                ["CreditCards"] = "Credit Cards",
                 ["Account"] = "Account",
                 ["Subscriptions"] = "Subscriptions",
                 ["Authentication"] = "Authentication",
@@ -236,6 +224,7 @@ else
                 ["Statistics"] = "الاحصائيات",
                 ["Profile"] = "الملف الشخصي",
                 ["Spaces"] = "المساحات",
+                ["CreditCards"] = "بطاقات الائتمان",
 
                 ["Account"] = "الحساب",
                 ["Subscriptions"] = "الاشتراكات",
@@ -260,22 +249,23 @@ else
         CurrentLanguage = language;
         NavItems=  new()
         {
-            new NavItem { Label = GetLabel("Statistics"),Icon=@Icons.Material.Filled.QueryStats, Url = "settings/Statistics" },
-            new NavItem { Label = GetLabel("Subscriptions"),Icon=@Icons.Material.Filled.Subscriptions, Url = "settings/SubscriptionTemplate" },
-            new NavItem { Label = GetLabel("Spaces"), Url = "settings/spaces" },
-            new NavItem { Label = GetLabel("models"), Url = "settings/models" },
+            new NavItem { Label = GetLabel("Statistics"), Url = "settings/Statistics" ,Icon=@Icons.Material.Filled.QueryStats},
+            new NavItem { Label = GetLabel("Subscriptions"), Url = "settings/SubscriptionTemplate",Icon=@Icons.Material.Filled.Subscriptions },
+            new NavItem { Label = GetLabel("Spaces"), Url = "settings/spaces",Icon=@Icons.Material.Filled.SpaceDashboard },
+            new NavItem { Label = GetLabel("models"), Url = "settings/models" ,Icon=@Icons.Material.Filled.ModelTraining},
+            new NavItem { Label = GetLabel("CreditCards"), Url = "settings/CreditCards",Icon=@Icons.Material.Filled.CreditCard },
 
-            new NavItem { Label = GetLabel("Billing"), Url = "settings/billing" },
-            new NavItem { Label = GetLabel("Authentication"), Url = "settings/authentication" },
-            new NavItem { Label = GetLabel("Access Tokens"), Url = "settings/AccessTokens" },
+            new NavItem { Label = GetLabel("Billing"), Url = "settings/billing", },
+            new NavItem { Label = GetLabel("Authentication"), Url = "settings/authentication",Icon=@Icons.Material.Filled.PrivacyTip, },
+            new NavItem { Label = GetLabel("Access Tokens"), Url = "settings/AccessTokens",Icon=@Icons.Material.Filled.Token, },
           //  new NavItem { Label = GetLabel("SSH and GPG Keys"), Url = "settings/keys" },
-            new NavItem { Label = GetLabel("Webhooks"), Url = "settings/webhooks" },
+            new NavItem { Label = GetLabel("Webhooks"), Url = "settings/webhooks",Icon=@Icons.Material.Filled.Webhook, },
            // new NavItem { Label = GetLabel("Papers"), Url = "settings/papers" },
-            new NavItem { Label = GetLabel("Notifications"),Icon=@Icons.Material.Filled.Notifications, Url = "settings/notifications" },
+            new NavItem { Label = GetLabel("Notifications"), Url = "settings/notifications",Icon=@Icons.Material.Filled.Notifications },
             //new NavItem { Label = GetLabel("Local Apps and"), Url = "settings/local-apps", Badge = "NEW" },
            // new NavItem { Label = GetLabel("Gated Repositories"), Url = "settings/gated-repos" },
-           new NavItem { Label = GetLabel("Profile"),Icon=@Icons.Material.Filled.Person, Url = "settings/profile" },
-            new NavItem { Label = GetLabel("Account"),Icon=@Icons.Material.Filled.ManageAccounts, Url = "settings/Account" },
+           new NavItem { Label = GetLabel("Profile"), Url = "settings/profile",Icon=@Icons.Material.Filled.Person },
+            new NavItem { Label = GetLabel("Account"), Url = "settings/Account" ,Icon=@Icons.Material.Filled.ManageAccounts},
 
            // new NavItem { Label = GetLabel("Connected Apps"), Url = "settings/applications" },
             new NavItem { Label = GetLabel("Theme"), Url = "settings/theme" }
@@ -310,10 +300,11 @@ else
                 { "profile", typeof(ProfileForm) },
                 { "Account", typeof(AccountTemplate) },
                 { "SubscriptionTemplate", typeof(TemplateSubscriptionsPlan) },
+                { "CreditCards", typeof(TemplateCreditCards) },
                 { "billing", typeof(BillingSection) },
                 { "authentication", typeof(AuthenticationTemplate) },
                 { "models", typeof(TemplateModels) },
-                { "AccessTokens", typeof(AccessTokensTemplate) },
+                { "AccessTokens", typeof(TemplateAccessToken) },
                 { "spaces", typeof(TemplateSpaces) },
                 { "keys/addtype=ssh", typeof(KeysAddaSSHkey) },
                 { "keys/addtype=pgp", typeof(Keysaddapgpp) },
