--- a/LAHJA/UI/Templates/Studio/TemplateStudio.razor
+++ b/LAHJA/UI/Templates/Studio/TemplateStudio.razor
@@ -1,8 +1,8 @@
 ﻿@using LAHJA.UI.Components.StudioLahjaAi
+@using Microsoft.AspNetCore.Authorization
 
+@attribute [Authorize]
 
 <MainStudio />
 
-@code {
 
-}
